# cloneprac

project/: README.md
project/backend/: .env.example  README.md  pyproject.toml
project/backend/app/: __init__.py  main.py
project/backend/app/api/: __init__.py  deps.py
project/backend/app/api/routes/: __init__.py  admin.py  auth.py  doctors.py  patients.py
project/backend/app/core/: __init__.py  config.py  security.py
project/backend/app/db/: __init__.py  base.py  base_class.py  session.py
project/backend/app/models/: __init__.py  appointment.py  doctor_profile.py  notification.py  specialty.py  transaction.py  user.py
project/backend/app/schemas/: __init__.py  appointment.py  auth.py  doctor.py  notification.py  specialty.py  token.py  transaction.py  user.py
project/backend/app/services/: __init__.py  availability.py
project/backend/app/utils/: __init__.py
project/docs/: tech-spec.md
project/frontend/: .eslintrc.json  README.md  next.config.mjs  package.json  tsconfig.json
project/frontend/app/: layout.tsx  page.tsx
project/frontend/app/(admin)/admin/dashboard/: page.tsx
project/frontend/app/(admin)/admin/doctors/: page.tsx
project/frontend/app/(admin)/admin/reports/: page.tsx
project/frontend/app/(admin)/admin/users/: page.tsx
project/frontend/app/(doctor)/doctor/appointments/: page.tsx
project/frontend/app/(patient)/patient/: page.tsx
project/frontend/components/: MetricCard.tsx  RoleLayout.tsx
project/frontend/lib/: api.ts
project/frontend/styles/: globals.css
project/frontend/types/: index.ts
(+6 files in other folders)
